prevent overscrolling on mobile by setting to none

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1404,7 +1404,7 @@ footer.footer {
   html,
   body,
   main {
-    overscroll-behavior-y: contain;
+    overscroll-behavior-y: none;
   }
   .header-menu-item-container:nth-of-type(4) {
     background: var(--red);
